installed sassdoc + cleanup

--- a/stylesheets/aleksi/general/_apply.scss
+++ b/stylesheets/aleksi/general/_apply.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - APPLY
 // =============================================================================
-//// @group General
+////
+//// @group aleksi-general
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/lists/walk";
