--- a/stylesheets/aleksi/general/_is-of-type.scss
+++ b/stylesheets/aleksi/general/_is-of-type.scss
@@ -1,6 +1,8 @@
 // =============================================================================
 // =ALEKSI - IS-OF-TYPE
 // =============================================================================
+////
+//// @group aleksi-general
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
