--- a/stylesheets/aleksi/lists/_is-list.scss
+++ b/stylesheets/aleksi/lists/_is-list.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - IS-LIST
 // =============================================================================
+////
+//// @group aleksi-lists
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 // =is-list( $value )
 // -----------------------------------------------------------------------------
