--- a/stylesheets/aleksi/lists/_next.scss
+++ b/stylesheets/aleksi/lists/_next.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - NEXT
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =next( $list, $value )
