--- a/stylesheets/aleksi/lists/_prepend.scss
+++ b/stylesheets/aleksi/lists/_prepend.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALESKI - PREPEND
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
