--- a/stylesheets/aleksi/lists/_walk.scss
+++ b/stylesheets/aleksi/lists/_walk.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - WALK
 // =============================================================================
-//// @group General
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
