--- a/stylesheets/aleksi/maps/_debug-map.scss
+++ b/stylesheets/aleksi/maps/_debug-map.scss
@@ -1,7 +1,8 @@
 // =============================================================================
-// =ALEKSI - DEBUG MAP
+// =ALEKSI - DEBUG-MAP
 // =============================================================================
-//// @group Aleksi
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =debug-map( $map )
