--- a/stylesheets/aleksi/maps/_is-map.scss
+++ b/stylesheets/aleksi/maps/_is-map.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - IS-MAP
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 // =is-map( $value )
 // -----------------------------------------------------------------------------
