--- a/stylesheets/aleksi/maps/_map-clean.scss
+++ b/stylesheets/aleksi/maps/_map-clean.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP-CLEAN
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-clean( $map )
 // -----------------------------------------------------------------------------
