--- a/stylesheets/aleksi/maps/_map-extend.scss
+++ b/stylesheets/aleksi/maps/_map-extend.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP-EXTEND
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/maps/map-merge-deep";
 
