--- a/stylesheets/aleksi/maps/_map-get-tuple.scss
+++ b/stylesheets/aleksi/maps/_map-get-tuple.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP-GET-TUPLE
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-get-tuple( $map, $key )
 // -----------------------------------------------------------------------------
