--- a/stylesheets/aleksi/maps/_map-select.scss
+++ b/stylesheets/aleksi/maps/_map-select.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MAP-SELECT
 // =============================================================================
-//// @group Maps
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-select( $map, $keys )
