--- a/stylesheets/aleksi/maps/_map-sort.scss
+++ b/stylesheets/aleksi/maps/_map-sort.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP-SORT
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
 @import "sassy-maps";
