--- a/stylesheets/aleksi/maps/_map-unique.scss
+++ b/stylesheets/aleksi/maps/_map-unique.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP-UNIQUE
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-unique( $map )
 // -----------------------------------------------------------------------------
