--- a/stylesheets/aleksi/maps/_map-zip.scss
+++ b/stylesheets/aleksi/maps/_map-zip.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // =ALEKSI - MAP_ZIP
 // =============================================================================
+////
+//// @group aleksi-maps
+//// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/lists/wrap-in-list";
 
