--- a/stylesheets/aleksi/math/_add.scss
+++ b/stylesheets/aleksi/math/_add.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - ADD
 // =============================================================================
-//// @group Math
+////
+//// @group aleksi-math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
