--- a/stylesheets/aleksi/math/_divide.scss
+++ b/stylesheets/aleksi/math/_divide.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - DIVIDE
 // =============================================================================
-//// @group Math
+////
+//// @group aleksi-math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
@@ -54,7 +55,7 @@
 // -----------------------------------------------------------------------------
 /// @alias divide
 ///
-/// @acces public
+/// @access public
 /// @since 0.1.0
 
 @function div( $terms... )
