--- a/stylesheets/aleksi/math/_multiply.scss
+++ b/stylesheets/aleksi/math/_multiply.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MULTIPLY
 // =============================================================================
-//// @group Math
+////
+//// @group aleksi-math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
@@ -54,7 +55,7 @@
 // -----------------------------------------------------------------------------
 /// @alias multiply
 ///
-/// @acces public
+/// @access public
 /// @since 0.1.0
 
 @function mult( $terms... )
