--- a/stylesheets/aleksi/math/_subtract.scss
+++ b/stylesheets/aleksi/math/_subtract.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - SUBTRACT
 // =============================================================================
-//// @group Math
+////
+//// @group aleksi-math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
@@ -52,7 +53,7 @@
 
 // =diff( $terms... )
 // -----------------------------------------------------------------------------
-/// @alis subtract
+/// @alias subtract
 ///
 /// @access public
 /// @since 0.1.0
