--- a/stylesheets/aleksi/_settings.scss
+++ b/stylesheets/aleksi/_settings.scss
@@ -3,22 +3,5 @@
 // =============================================================================
 //// Setting variables for the functionality provided by Aleksi.
 ////
+//// @group aleksi-settings
 //// @author [Yoannis Jamar](http://yoannis.me)
-
-// =$aleski-logger-level
-// -----------------------------------------------------------------------------
-/// The level at which SassyLogger should run. When running in a Compass and
-/// compass environment. If the Compass `environment` configuration option is
-/// is set to 'development' it will default to 'DEBUG'. If it is set to
-/// 'production' it will default to 'ERROR'. If not running in Compass, it
-/// will default to 'INFO'.
-///
-/// @type string
-///
-/// @example scss
-///   $aleski-loggel-level: 'DEBUG';
-///
-/// @access public
-/// @since 0.1.0
-
-$aleksi-logger-level: if( compass-env(), if( compass-env() == 'developemnt', 'DEBUG', 'EROOR'), 'INFO') !default;
