--- a/stylesheets/aleksi/general/_throw.scss
+++ b/stylesheets/aleksi/general/_throw.scss
@@ -3,10 +3,10 @@
 // =============================================================================
 //// Tools to throw errors and warnings.
 ////
-//// @group General
+//// @group aleksi-general
 //// @author [Yoannis Jamar](http://yoannis.me)
 ////
-//// @todo Fork SassyLogger to add support inside of functions.
+//// @todo Fork SassyLogger to add support inside of functions and implement it.
 
 // =_throw( $type, $message )
 // -----------------------------------------------------------------------------
@@ -85,7 +85,6 @@
 /// @param {string} $type - The type of log message you want to throw (either 'warn' or 'error')
 /// @param {string} $message - The message to print in the Sass console.
 ///
-/// @return {null} - Always returns null
 /// @throw `$type` is not a valid Sass logging directive.
 /// @throw `$message` must be a string.
 ///
@@ -103,8 +102,6 @@
 ///
 /// @param {string} $message - The message to print in the Sass console.
 ///
-/// @return {null} - Always returns `null`.
-///
 /// @access public
 /// @since 0.1.0
 
@@ -118,8 +115,6 @@
 /// Throws an error to the console with the given `$message`.
 ///
 /// @param {string} $message - The message to print in the Sass console.
-///
-/// @return {null} - Always returns `null`.
 ///
 /// @access public
 /// @since 0.1.0
