--- a/stylesheets/aleksi/lists/_depth.scss
+++ b/stylesheets/aleksi/lists/_depth.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - DEPTH
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/maps/map-depth";
