--- a/stylesheets/aleksi/lists/_list-filter.scss
+++ b/stylesheets/aleksi/lists/_list-filter.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - FILTER
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/maps/map-filter";
