--- a/stylesheets/aleksi/lists/_previous.scss
+++ b/stylesheets/aleksi/lists/_previous.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - PREVIOUS
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =previous( $list, $value )
