--- a/stylesheets/aleksi/lists/_set-list-separator.scss
+++ b/stylesheets/aleksi/lists/_set-list-separator.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - SET-LIST-SEPARATOR
 // =============================================================================
-//// @group Lists
+////
+//// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 ////
 //// @todo Move 'shortcut' functions to separate files ?
@@ -57,7 +58,7 @@
 // -----------------------------------------------------------------------------
 /// @alias set-list-separator
 ///
-/// @acces public
+/// @access public
 /// @since 0.1.0
 
 @function to-separator( $list, $separator )
@@ -160,7 +161,7 @@
 // -----------------------------------------------------------------------------
 /// @alias switch-list-separator
 ///
-/// @acces public
+/// @access public
 /// @since 0.1.0
 
 @function switch-separator( $list )
