--- a/stylesheets/aleksi/maps/_map-depth.scss
+++ b/stylesheets/aleksi/maps/_map-depth.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MAP-DEPTH
 // =============================================================================
-//// @group Maps
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-depth( $map )
