--- a/stylesheets/aleksi/maps/_map-find.scss
+++ b/stylesheets/aleksi/maps/_map-find.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MAP-FIND
 // =============================================================================
-//// @group Maps
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-find-key( $map, $value )
