--- a/stylesheets/aleksi/maps/_map-has-keys.scss
+++ b/stylesheets/aleksi/maps/_map-has-keys.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MAP-HAS-KEYS
 // =============================================================================
-//// @group Maps
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 // =map-has-keys( $map, $keys )
