--- a/stylesheets/aleksi/maps/_map-walk.scss
+++ b/stylesheets/aleksi/maps/_map-walk.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // =ALEKSI - MAP-WALK
 // =============================================================================
-//// @group Maps
+////
+//// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "sassy-maps/map-set";
