--- a/stylesheets/aleksi/general/_is-of-type.scss
+++ b/stylesheets/aleksi/general/_is-of-type.scss
@@ -40,7 +40,7 @@
 @function is-of-type( $value, $type )
 {
   // accept a list of multiple types to test against
-  @if type-of($type) == list {
+  @if is-list($type) {
     @each $t in $type {
       @if is-of-type($value, $t) {
         @return true;
