--- a/stylesheets/aleksi/math/_add.scss
+++ b/stylesheets/aleksi/math/_add.scss
@@ -6,6 +6,8 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "SassyLists";
+@import "aleksi/general/throw";
+@import "aleksi/general/is-of-type";
 
 // =add( $terms... )
 // -----------------------------------------------------------------------------
