--- a/stylesheets/aleksi/lists/_next.scss
+++ b/stylesheets/aleksi/lists/_next.scss
@@ -5,6 +5,8 @@
 //// @group aleksi-lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/general/throw";
+
 // =next( $list, $value )
 // -----------------------------------------------------------------------------
 /// Returns the item sitting next to the given value in alist. If the value is
