--- a/stylesheets/aleksi/maps/_debug-map.scss
+++ b/stylesheets/aleksi/maps/_debug-map.scss
@@ -5,6 +5,8 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/maps/map-depth";
+
 // =debug-map( $map )
 // -----------------------------------------------------------------------------
 /// Prints out the given map's contents and useful information for debugging
@@ -24,11 +26,12 @@
     @debug-map {
       __toString__: inspect($map);
       __length__: length($map);
-      __depth__: depth($map);
+      __depth__: map-depth($map);
       __keys__: map-keys($map);
       __properties__ {
         @each $key, $value in $map {
-          #{'(' + type-of($value) + ') ' + $key}: inspect($value);
+          $key-str: '(#{type-of($value)})-#{$key}';
+          #{$key-str}: inspect($value);
         }
       }
     }
