--- a/stylesheets/aleksi/maps/_map-clean.scss
+++ b/stylesheets/aleksi/maps/_map-clean.scss
@@ -5,6 +5,9 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/general/throw";
+@import "aleksi/maps/is-map";
+
 // =map-clean( $map )
 // -----------------------------------------------------------------------------
 /// Removes all falsy values from a map.
