--- a/stylesheets/aleksi/maps/_map-depth.scss
+++ b/stylesheets/aleksi/maps/_map-depth.scss
@@ -5,6 +5,9 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/general/throw";
+@import "aleksi/maps/is-map";
+
 // =map-depth( $map )
 // -----------------------------------------------------------------------------
 /// Returns the depth level of a given map.
