--- a/stylesheets/aleksi/maps/_map-extend.scss
+++ b/stylesheets/aleksi/maps/_map-extend.scss
@@ -5,6 +5,9 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "SassyLists";
+@import "aleksi/general/throw";
+@import "aleksi/maps/is-map";
 @import "aleksi/maps/map-merge-deep";
 
 // =map-extend( $maps... )
