--- a/stylesheets/aleksi/maps/_map-merge-deep.scss
+++ b/stylesheets/aleksi/maps/_map-merge-deep.scss
@@ -6,6 +6,8 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "sassy-maps";
+@import "aleksi/general/throw";
+@import "aleksi/maps/is-map";
 
 // =map-merge-deep( $map-a, $map-b )
 // -----------------------------------------------------------------------------
