--- a/stylesheets/aleksi/maps/_map-walk.scss
+++ b/stylesheets/aleksi/maps/_map-walk.scss
@@ -5,7 +5,7 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "sassy-maps/map-set";
+@import "sassy-maps";
 @import "aleksi/general/throw";
 @import "aleksi/maps/is-map";
 
