Constants setter and getter

--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -13,6 +13,7 @@
 @import "sassy-maps";
 
 // PARTIALS
+@import "aleksi/config";
 @import "aleksi/settings";
 @import "aleksi/general";
 @import "aleksi/math";
