add 'reduce-sides()' function + 'output-sides()' and 'css-rule()' mixins to output css sides properties

--- a/stylesheets/aleksi/_general.scss
+++ b/stylesheets/aleksi/_general.scss
@@ -8,3 +8,4 @@
 @import "aleksi/general/is-of-type";
 @import "aleksi/general/default-to";
 @import "aleksi/general/apply";
+@import "aleksi/general/css-rule";
