fix sassdoc's @alias

--- a/stylesheets/aleksi/lists/_get-nth.scss
+++ b/stylesheets/aleksi/lists/_get-nth.scss
@@ -33,7 +33,7 @@
 
 // =list-get( $list, $index )
 // -----------------------------------------------------------------------------
-/// @alias {function} get-nth
+/// @alias get-nth
 ///
 /// @acces public
 /// @since 0.1.0
