--- a/stylesheets/aleksi/sides/_output-sides.scss
+++ b/stylesheets/aleksi/sides/_output-sides.scss
@@ -59,7 +59,7 @@
 
 // =sides( $property, $values[, $important ])
 // -----------------------------------------------------------------------------
-/// @alias {mixin} output-sides
+/// @alias output-sides
 ///
 /// @access public
 /// @since 0.1.0
