--- a/stylesheets/aleksi/sides/_reduce-sides.scss
+++ b/stylesheets/aleksi/sides/_reduce-sides.scss
@@ -63,7 +63,7 @@
 
 // =reduce-sides( $list )
 // -----------------------------------------------------------------------------
-/// @alias {function} reduce-sides-list
+/// @alias reduce-sides-list
 ///
 /// @access public
 /// @since 0.1.0
