--- a/stylesheets/aleksi/sides/_side-name.scss
+++ b/stylesheets/aleksi/sides/_side-name.scss
@@ -36,7 +36,7 @@
 
 // =nth-side( $index )
 // -----------------------------------------------------------------------------
-/// @alias {function} side-name
+/// @alias side-name
 ///
 /// @access public
 /// @since 0.1.0
