--- a/stylesheets/aleksi/sides/_side-value.scss
+++ b/stylesheets/aleksi/sides/_side-value.scss
@@ -71,7 +71,7 @@
 
 // =side-value( $list, $side )
 // -----------------------------------------------------------------------------
-/// @alias {function} get-side-value
+/// @alias get-side-value
 ///
 /// @access public
 /// @since 0.1.0
