--- a/stylesheets/aleksi/sides/_to-sides-map.scss
+++ b/stylesheets/aleksi/sides/_to-sides-map.scss
@@ -45,7 +45,7 @@
 
 // =to-sides-map( $list )
 // -----------------------------------------------------------------------------
-/// @alias {function} sides-list-to-map
+/// @alias sides-list-to-map
 ///
 /// @access public
 /// @since 0.1.0
