separate constants setter/getter from constant values

--- a/stylesheets/aleksi/config/_constants.scss
+++ b/stylesheets/aleksi/config/_constants.scss
@@ -2,10 +2,7 @@
 // =ALEKSI - CONSTANTS
 // =============================================================================
 
-$CONSTANTS: (
-  'CSS_SIDES': 'top' 'right' 'bottom' 'left',
-  'CSS_POSITIONS': 'top' 'right' 'bottom' 'left' 'center',
-);
+$CONSTANTS: () !default;
 
 // =const( $name )
 // -----------------------------------------------------------------------------
