--- a/stylesheets/aleksi/sides/_output-sides.scss
+++ b/stylesheets/aleksi/sides/_output-sides.scss
@@ -3,6 +3,7 @@
 // =============================================================================
 
 @import "aleksi/general/css-rule";
+@import "aleksi/sides/constants";
 @import "aleksi/sides/side-value";
 @import "aleksi/sides/reduce-sides";
 
