--- a/stylesheets/aleksi/sides/_side-name.scss
+++ b/stylesheets/aleksi/sides/_side-name.scss
@@ -4,6 +4,7 @@
 
 @import "aleksi/general/throw";
 @import "aleksi/config/constants";
+@import "aleksi/sides/constants";
 
 // =side-name( $index )
 // -----------------------------------------------------------------------------
