--- a/stylesheets/aleksi/sides/_side-value.scss
+++ b/stylesheets/aleksi/sides/_side-value.scss
@@ -6,6 +6,7 @@
 @import "aleksi/config/constants";
 @import "aleksi/general/throw";
 @import "aleksi/maps/is-map";
+@import "aleksi/sides/constants";
 
 // =get-side-value( $list, $side )
 // -----------------------------------------------------------------------------
