--- a/stylesheets/aleksi/sides/_to-sides-list.scss
+++ b/stylesheets/aleksi/sides/_to-sides-list.scss
@@ -7,6 +7,7 @@
 @import "aleksi/general/is-of-type";
 @import "aleksi/general/throw";
 @import "aleksi/lists/contained-in";
+@import "aleksi/sides/constants";
 @import "aleksi/sides/reduce-sides";
 
 // =sides-map-to-list( $map[, $reduce ])
