--- a/stylesheets/aleksi/sides/_to-sides-map.scss
+++ b/stylesheets/aleksi/sides/_to-sides-map.scss
@@ -5,6 +5,7 @@
 @import "sassy-maps";
 @import "aleksi/config/constants";
 @import "aleksi/general/throw";
+@import "aleksi/sides/constants";
 
 // =sides-list-to-map( $list )
 // -----------------------------------------------------------------------------
