rename 'units' to 'lengths' + compass's 'convert-length' function

--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -17,7 +17,7 @@
 @import "aleksi/settings";
 @import "aleksi/general";
 @import "aleksi/math";
-@import "aleksi/units";
+@import "aleksi/lengths";
 @import "aleksi/colors";
 @import "aleksi/lists";
 @import "aleksi/maps";
