--- a/stylesheets/aleksi/_lengths.scss
+++ b/stylesheets/aleksi/_lengths.scss
@@ -5,4 +5,4 @@
 //// @group aleksi-units
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "aleksi/units/strip-unit";
+@import "aleksi/lengths/strip-unit";
