declare constants in '_config.scss' + cleanup

--- a/stylesheets/aleksi/_config.scss
+++ b/stylesheets/aleksi/_config.scss
@@ -3,4 +3,9 @@
 // =============================================================================
 
 @import "aleksi/config/constants";
-@import "aleksi/config/settings";
+
+// =sass constants
+// =============================================================================
+
+@include const('CSS_SIDES', 'top' 'right' 'bottom' 'left');
+@include const('CSS_POSITIONS', 'top' 'right' 'bottom' 'left' 'center');
