--- a/stylesheets/aleksi/sides/_output-sides.scss
+++ b/stylesheets/aleksi/sides/_output-sides.scss
@@ -2,8 +2,8 @@
 // =ALEKSI - SIDE-PROPERTY
 // =============================================================================
 
+@import "aleksi/config";
 @import "aleksi/general/css-rule";
-@import "aleksi/sides/constants";
 @import "aleksi/sides/side-value";
 @import "aleksi/sides/reduce-sides";
 
