--- a/stylesheets/aleksi/sides/_side-name.scss
+++ b/stylesheets/aleksi/sides/_side-name.scss
@@ -2,9 +2,9 @@
 // =ALEKSI - SIDE-NAME
 // =============================================================================
 
-@import "aleksi/general/throw";
+@import "aleksi/config";
 @import "aleksi/config/constants";
-@import "aleksi/sides/constants";
+@import "aleksi/general/throw";
 
 // =side-name( $index )
 // -----------------------------------------------------------------------------
