--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -11,12 +11,12 @@
 @import "SassyLists";
 @import "sassy-maps";
 
-
 // PARTIALS
 @import "aleksi/config";
 @import "aleksi/general";
 @import "aleksi/math";
 @import "aleksi/lengths";
+@import "aleksi/strings";
 @import "aleksi/colors";
 @import "aleksi/lists";
 @import "aleksi/maps";
