--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -22,6 +22,13 @@
 @import "aleksi/math/multiply";
 @import "aleksi/math/divide";
 
+// STRINGS
+// TODO: Write more and more accurate tests for string functions
+@import "aleksi/strings/char-at";
+@import "aleksi/strings/str-replace";
+@import "aleksi/strings/str-remove";
+@import "aleksi/strings/str-explode";
+
 // LISTS
 @import "aleksi/lists/is-list";
 @import "aleksi/lists/set-list-separator";
