--- a/stylesheets/aleksi/lengths/_convert.scss
+++ b/stylesheets/aleksi/lengths/_convert.scss
@@ -4,9 +4,48 @@
 //// @group aleksi-lengths
 //// @author [Chris Eppstein](http://chriseppstein.github.io/)
 
+@import "aleksi/lengths/strip-unit";
+
+// =default globals
+// -----------------------------------------------------------------------------
+
 // Base font size in pixels, if not already defined.
-// Should be the same as the font-size of the html element.
+// Should be the same as the font-size of the body element.
 $base-font-size: 16px !default;
+
+// Root font size in pixels, if not already defined
+// Should be the same as the font-size of the html element.
+$root-font-size: $base-font-size !default;
+
+// =convert-lengths( $values, $to-unit[, $from-context, $to-context ])
+// -----------------------------------------------------------------------------
+// Convert all lengths in given list or map. Doesn't try to convert none-number
+// values in the list/map.
+///
+/// @param {list|map} $values - A css list or map with lengths to convert
+/// @param {string} $to-unit - A css unit keyword, e.g. 'em', '%', 'px', etc.
+/// @param {number} $from-context [$base-font-size] - The absolute length (in px) to which `$length` refers
+/// @param {number} $to-context [$from-context] - the absolute length in px to which the output value will refer.
+///
+/// @access public
+/// @since 0.2.2
+
+@function convert-lengths($values, $to-unit, $from-context: $base-font-size, $to-context: $from-context)
+{
+  $res: ();
+
+  @each $value in $values
+  {
+    // convert length values
+    @if type-of($value) == number {
+      $value: convert-length($value, $to-unit, $from-context, $to-context);
+    }
+
+    $res: append($res, $value);
+  }
+
+  @return $res;
+}
 
 // =convert-length( $length, $to-unit[, $from-context, $to-context ])
 // -----------------------------------------------------------------------------
@@ -31,8 +70,11 @@ $base-font-size: 16px !default;
 ) {
   $from-unit: unit($length);
 
-  // Optimize for cases where `from` and `to` units are accidentally the same.
+  // Optimize for cases where `from` and `to` units are the same.
   @if $from-unit == $to-unit { @return $length; }
+
+  // 0 is always 0
+  @if (strip-unit($length) == 0) { @return 0; }
 
   // Context values must be in px so we can determine a conversion ratio for
   // relative units.
@@ -45,7 +87,7 @@ $base-font-size: 16px !default;
   @if $from-unit != 'px' {
     // Convert relative units using the from-context parameter.
     @if      $from-unit == 'em'  { $px-length: $length * $from-context / 1em }
-    @else if $from-unit == 'rem' { $px-length: $length * $base-font-size / 1rem }
+    @else if $from-unit == 'rem' { $px-length: $length * $root-font-size / 1rem }
     @else if $from-unit == '%'   { $px-length: $length * $from-context / 100% }
     @else if $from-unit == 'ex'  { $px-length: $length * $from-context / 2ex }
     // Convert absolute units using Sass' conversion table.
@@ -73,7 +115,7 @@ $base-font-size: 16px !default;
   @if $to-unit != 'px' {
     // Relative units
     @if      $to-unit == 'em'  { $output-length: $px-length * 1em / $to-context }
-    @else if $to-unit == 'rem' { $output-length: $px-length * 1rem / $base-font-size }
+    @else if $to-unit == 'rem' { $output-length: $px-length * 1rem / $root-font-size }
     @else if $to-unit == '%'   { $output-length: $px-length * 100% / $to-context }
     @else if $to-unit == 'ex'  { $output-length: $px-length * 2ex / $to-context }
     // Absolute units
